# Qiana

./: .gitignore  FormulaParser.py  HACK.md  LICENSE.md  MANIFEST.in  Qiana.py  README.md  Schemes.py  input-example.p  pyproject.toml  requirements_gui.txt
code/: Formulas.py  main.py
code/qianaExtension/: Qiana.py  Schemes.py
code/reasoner/: formulas.py  main.py  tptpWriter.py  vampireParser.py
docs/: HACK.md
example/: aftermidnight_tuesday.p  input-example-contradiction.p  input-example.p  long_closure.p  output-example.html  output-example.json  output-test.p  output.p
src/: dotGeneration.py  formulaExtension.py  htmlGeneration.py  interfaceTypes.py  main.py  pipeline.py  qianaCLI.py  qianaGUI.py
src/examples/: RJbasic.p  RJbasic.py  SignatureTest.p  __init__.py  exampleSchemes.schemes  otherExampleSchemes.schemes
src/gui/: __init__.py  displayOptions.py  main.py  mainWindow.py  settings.py
src/qiana/: __init__.py  cli.py  dotGeneration.py  extendsimplifiedsyntax.py  htmlGeneration.py  interfaceTypes.py  pipeline.py
src/qianaExtension/: FormulaParser.py  Formulas.py  Qiana.py  SchemeFactory.py  Schemes.py  Signatures.py  __init__.py  formulaExtension.py  patternParsing.py  qianaAxio.schemes  signature.py  temp.py  tptpParsing.py
src/qianaExtension_back/: FormulaParser.py  Schemes.py
src/reasoner/: main.py  (+7 more)
test/: test_CLI.py  test_basic.py  test_closure.py  test_dot.py  test_formulas.py  test_pipeline.py  test_qianaExtension.py  test_qianaExtension_schemeparse.py  test_qianaExtension_signature.py  test_schemeGeneration.py  test_validReasoning.py
(+52 files in other folders)
